@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7607 2004/10/29 23:02:17 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7608 2004/10/30 00:47:37 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4971,3 +4971,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated entropy to 0.8.2.418nb2 [tv 2004-10-29]
 	Updated mklivecd to 0.7 [xtraeme 2004-10-29]
 	Added putty-0.56 [xtraeme 2004-10-29]
+	Updated jpeg to 6bnb3 [xtraeme 2004-10-30]
